--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,23 @@
-discord.py>=2.0.0  
-openai>=0.27.0  
-python-dotenv>=0.21.0  
-google-api-python-client>=2.70.0  
-faiss-cpu>=1.7.3  
-numpy>=1.21.0  
+# Discord
+discord.py==2.3.2
+
+# OpenAI
+openai==1.51.2
+
+# Environment variables
+python-dotenv==1.0.0
+
+# Google Drive API
+google-api-python-client==2.149.0
+google-auth==2.35.0
+google-auth-oauthlib==1.2.1
+google-auth-httplib2==0.2.0
+
+# Vector search (FAISS alternative for better compatibility)
+faiss-cpu==1.8.0
+
+# Scientific computing
+numpy==1.24.4
+
+# HTTP requests (for better compatibility)
+requests==2.31.0
